# wuziqi

./: .gitignore  GOAL.md  README.md  REMOTE_GPU_HANDOFF.md  checkpoint_registry.py  config.py  evaluator.py  game.py  improve.py  main.py  mcts.py  model.py  players.py  pyproject.toml  remote_health_check.py  replay_audit.py  resource_monitor.py  tactical.py  tensorboard_audit.py  test_evaluator.py  test_game.py  test_improve.py  test_mcts.py  test_remote_health_check.py  test_replay_audit.py  test_resource_monitor.py  test_tensorboard_audit.py  test_tracking.py  test_train_parallel.py  test_train_target_quality.py  test_training_audit.py  tracking.py  train.py  training_audit.py  web_app.py
static/: app.js  index.html  styles.css
