[project]
name = "gomoku-rl"
version = "0.1.0"
description = "AlphaZero implementation for Gomoku"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "torch",
    "tensorboard",
    "wandb",
    "tqdm",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "checkpoint_registry",
    "config",
    "game",
    "html_logger",
    "evaluator",
    "improve",
    "main",
    "mcts",
    "model",
    "players",
    "reproduce_logger",
    "tactical",
    "tracking",
    "train",
    "web_app",
]

[tool.uv]
dev-dependencies = [
    "pytest",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
